[package]
name = "leptos-struct-table"
version = "0.13.0"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming"]
description = "Generate a complete batteries included leptos data table component from a struct definition."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "table", "data-sheet", "data-grid"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-struct-table"

[dependencies]
leptos = { version = "0.7.0-rc0" }
leptos-struct-table-macro = { version = "0.11.2" }
leptos-use = "0.14.0-gamma2"
rust_decimal = { version = "1.36", optional = true }
chrono = { version = "0.4", optional = true }
serde = "1"
time = { version = "0.3", optional = true, features = ["formatting"] }
uuid = { version = "1.11.0", optional = true, features = [] }
thiserror = "1"
web-sys = "0.3.70"
wasm-bindgen = "0.2"
send_wrapper = { version = "0.6.0", features = ["futures"] }

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
rust_decimal = ["dep:rust_decimal"]
time = ["dep:time"]
i18n = ["leptos-struct-table-macro/i18n"]

[package.metadata."docs.rs"]
all-features = true
